# Sorting-Algorithms

./: .gitmodules  CMakeLists.txt
headers/: sorts.h  utils.h
sources/: main.c
sources/sorts/: bubble_sort.c  counting_sort.c  insertion_sort.c  merge_sort.c  quick_sort.c  selection_sort.c
sources/utils/: helper.c  visualizer.c
tests/: test.c
